<resources>
    <string name="app_name">EmpDi</string>

    <!-- Menu Items -->
    <string name="no_sort">No-Sort Refresh</string>
    <string name="sort_name">Sort by Name</string>
    <string name="sort_team">Sort by Team</string>
    <string name="malformed_list">Malformed List</string>
    <string name="empty_list">Empty List</string>
    <string name="bad_url">Bad URL</string>

    <!-- Employee Directory Fragment -->
    <string name="empdir_screen_title">Employee Directory</string>
    <string name="empdir_heading">Employees</string>
    <string name="employee_list_empty">No Employees Yet</string>


    <!-- Employee Detail Fragment -->
    <string name="emp_detail_screen_title">Employee Details</string>

</resources>