<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.mistring.empdi.view.MainActivity">

    <item
        android:id="@+id/action_no_sort"
        android:orderInCategory="10"
        android:title="@string/no_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_name"
        android:orderInCategory="20"
        android:title="@string/sort_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_team"
        android:orderInCategory="30"
        android:title="@string/sort_team"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_malformed_list"
        android:orderInCategory="40"
        android:title="@string/malformed_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_empty_list"
        android:orderInCategory="50"
        android:title="@string/empty_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bad_url"
        android:orderInCategory="60"
        android:title="@string/bad_url"
        app:showAsAction="never" />

</menu>